# challenge.example

./: CMakeLists.txt  README.md
_task/: CMakeLists.txt  ITask.hpp
asumaneev/: CMakeLists.txt  main.cpp  task.example.cpp  task.example.h
somelooser/: CMakeLists.txt  main.cpp  task.example.cpp
